--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 			<li><a href="about.html">About</a></li><!--linking navigation item and adding it's name-->
 			<li><a href="cv.html">CV</a></li><!--linking navigation item and adding it's name-->
 			<li><a href="social.html">Social</a></li><!--linking navigation item and adding it's name-->
-			<li><a href="report.html">Report</a></li><!--linking navigation item and adding it's name-->
+			<li><a href="report.html" target="_blank">Report</a></li><!--linking navigation item and adding it's name-->
 			<li><a href="contact.html">Contact</a></li>	<!--linking navigation item and adding it's name-->
 		</ul><!--closing tag of unordered list-->
 		</nav><!--closing tag for navigation-->
