--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
 			<li><a href="about.html">About</a></li><!--linking navigation and adding it's name-->
 			<li><a href="cv.html">CV</a></li><!--linking navigation and adding it's name-->
 			<li><a href="social.html">Social</a></li><!--linking navigation and adding it's name-->
-			<li><a href="report.html">Report</a></li><!--linking navigation and adding it's name-->
+			<li><a href="report.html" target="_blank">Report</a></li><!--linking navigation and adding it's name-->
 			<li><a href="contact.html">Contact</a></li>	<!--linking navigation and adding it's name-->
 		</ul><!--closing tag for unordered list-->
 		</nav><!--closing tag for navigation-->
