--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     	<nav><!--opening tag for navigation-->
 			<ul><!--for making unordered items list-->
 			<li><a href="index.html">Home</a></li><!--linking navigation item and adding its name-->	
-			<li><a href="about.html" target="_blank">About</a></li><!--linking navigation item and adding it's name-->
-			<li><a href="cv.html" target="_blank">CV</a></li><!--linking navigation item and adding it's name-->
-			<li><a href="social.html" target="_blank">Social</a></li><!--linking navigation item and adding it's name-->
+			<li><a href="about.html">About</a></li><!--linking navigation item and adding it's name-->
+			<li><a href="cv.html">CV</a></li><!--linking navigation item and adding it's name-->
+			<li><a href="social.html">Social</a></li><!--linking navigation item and adding it's name-->
 			<li><a href="report.html" target="_blank">Report</a></li><!--linking navigation item and adding it's name-->
-			<li><a href="contact.html" target="_blank">Contact</a></li><!--linking navigation item and adding it's name-->
+			<li><a href="contact.html">Contact</a></li><!--linking navigation item and adding it's name-->
 		</ul>
 		</nav><!--closing tag for navigation-->
 	<section><!--for sectioning body-->
