--- a/report.html
+++ b/report.html
@@ -21,7 +21,28 @@ Overall, my experience from this project was good than I expected. I am happy wi
 </div>
 <div class="intro">
 <br><br><b>Design</b>
-<br>	
+<br>Design is really important part in any developement project. For this project as well the planning of design was done firstly before coding. The wireframes of web design before developing are shown below:
+<br>Wireframe of landing page:
+<br><img src="img/homepage.jpg" class="design1" width="50%" height="15%">
+<br>This is the wireframe of about page:<br>
+<img src="img/about1.jpg" class="design2" width="50%" height="15%">	
+<br>This is the wireframe of CV page:<br>
+<img src="img/cv.jpg" class="design3" width="50%" height="15%">
+<br>This is the wireframe of Social page:<br>
+<img src="img/social.jpg" class="design4" width="50%" height="15%">
+<br>This is the wireframe of Contact page:<br>
+<img src="img/contact.jpg" class="design5" width="50%" height="15%">
+<br> The website is made for good experience of users and high usability of the system. The system is responsive and include UI designs. The mockup of website are below which was developed after wireframes.<br>
+<br>This is screen design of homepage:<br>
+<img src="img/homemock.png" class="mock1" width="60%" height="15%">
+<br>This is screen design of about page:<br>
+<img src="img/aboutmock.png" class="mock2" width="60%" height="15%">
+<br>This is screen design of CV page:<br>
+<img src="img/cvmock.png" class="mock3" width="60%" height="15%">
+<br>This is screen design of Social page:<br>
+<img src="img/socialmock.png" class="mock4" width="60%" height="15%">
+<br>This is screen design of Contact page:<br>
+<img src="img/contactmock.png" class="mock5" width="60%" height="15%">
 </div>
 </div>
 </body>
