--- a/report.html
+++ b/report.html
@@ -34,15 +34,15 @@ Overall, my experience from this project was good than I expected. I am happy wi
 <img src="img/contact.jpg" class="design5" width="50%" height="15%">
 <br> The website is made for good experience of users and high usability of the system. The system is responsive and include UI designs. The mockup of website are below which was developed after wireframes.<br>
 <br>This is screen design of homepage:<br>
-<img src="img/homemock.png" class="mock1" width="60%" height="15%">
+<img src="img/homemock.jpg" class="mock1" width="60%" height="15%">
 <br>This is screen design of about page:<br>
-<img src="img/aboutmock.png" class="mock2" width="60%" height="15%">
+<img src="img/aboutmock.jpg" class="mock2" width="60%" height="15%">
 <br>This is screen design of CV page:<br>
-<img src="img/cvmock.png" class="mock3" width="60%" height="15%">
+<img src="img/cvmock.jpg" class="mock3" width="60%" height="15%">
 <br>This is screen design of Social page:<br>
-<img src="img/socialmock.png" class="mock4" width="60%" height="15%">
+<img src="img/socialmock.jpg" class="mock4" width="60%" height="15%">
 <br>This is screen design of Contact page:<br>
-<img src="img/contactmock.png" class="mock5" width="60%" height="15%">
+<img src="img/contactmock.jpg" class="mock5" width="60%" height="15%">
 </div>
 </div>
 </body>
