--- a/report.html
+++ b/report.html
@@ -1,49 +1,99 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Personal CV</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="device-width initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<div class="repp">
-	<div class="intro">
+<html lang="en"><!--Declaration of language-->
+<head><!--head opening tag-->
+	<title>Personal CV</title><!--title of website-->
+	<meta charset="utf-8"><!--to support characters of unicode-->
+	<meta name="viewport" content="device-width initial-scale=1"><!--to support reponsive-->
+	<link rel="stylesheet" type="text/css" href="style.css"><!--to link the css to this html page-->
+</head><!--closing tag of head-->
+<body><!--opening tag of body-->
+<div class="repp"><!--making whole division for body-->
+	<div class="intro"><!--opening tag of division-->
+		<img src="img/cover.jpg" class="cover" width="40%" height="15%"><!--linking image-->
+		<br><br><b>Table of contents:</b>
+		<br>1.Introduction
+		<br>2.Experience
+		<br>3.UI design
+		<br>4. Designs
+		<br>5.Evidence of valid codes
+		<br>6.Progressive report
+		<br>7.Conclusion
+		<br>8. References<!--contents of division-->
+		
+	</div><!--closing tag of division-->
+	<div class="intro"><!--opening tag for class-->
 	<br><b>Introduction</b>
-	<br>This project of web development was given to students to use what they learned in lectures of first term. We were supposed to develop our personal CV website from scratch. I created this website using the knowledge I had from my lecture class and lot more of research to add specifications in the system. We were meant to create Homepage, about, CV, Social, Contact and Report. Home page is landing page of my website. About page includes a little about me, CV; which includes my Curriculum Vitae, Social; which includes all the social sites where people can reach me, Contact; where my location is embedded through Google map and a contact form, and finally report section. By use of this website people can contact me with my information, see my CV and know a bit more about me.
-	</div>
-	<div class="intro">
+	<br>This project of web development was given to students to use what they learned in lectures of first term. We were supposed to develop our personal CV website from scratch. I created this website using the knowledge I had from my lecture class and lot more of research to add specifications in the system. We were meant to create Homepage, about, CV, Social, Contact and Report. Home page is landing page of my website. About page includes a little about me, CV; which includes my Curriculum Vitae, Social; which includes all the social sites where people can reach me, Contact; where my location is embedded through Google map and a contact form, and finally report section. By use of this website people can contact me with my information, see my CV and know a bit more about me.<!--content of div-->
+	</div><!--closing tag of div-->
+	<div class="intro"><!--opening tag of div-->
 	<br><br><b>Experience</b>
 	<br>This project of web development was given us to use what we learned in Web development in first term. We were supposed to do this assignment individually. While doing this assignment I learned more about HTML and CSS from what I had learned in class.
 While starting this assignment I was worried about how I was going to complete it but as time passed by, from the researches and suggestions from tutor helped me a lot to work in this project. I revised all the teaching materials from lectures so that I can grasp ideas from them. I also did researches on the design and specification of CV websites. But, the coding is done solely by me. This project gave me more ideas about making responsive websites, designs, color schemes, animations and lot more.
 For small about of time doing this project I was skeptical about what I was doing and how I was doing it. I didn’t feel like my project was good enough as others but I did what I thought was going to be best for me slowly everything came along.
-Overall, my experience from this project was good than I expected. I am happy with the resources I got to broaden my knowledge about HTML and CSS. I went into this project with basic level knowledge and came out becoming confident with lot more knowledge and enough to carry more projects like this in future; in academic or in real field. 
-</div>
-<div class="intro">
-<br><br><b>Design</b>
+Overall, my experience from this project was good than I expected. I am happy with the resources I got to broaden my knowledge about HTML and CSS. I went into this project with basic level knowledge and came out becoming confident with lot more knowledge and enough to carry more projects like this in future; in academic or in real field.<!--content of div--> 
+</div><!--closing tag of div-->
+<div class="intro"><!--opening tag of division-->
+	<br><br><b>UI design</b>
+	<br>UI design also known as user interface design is design by help of which systems on different media platform can have maximum usability when users use it. While creating a website a developer should always keep account of their users and on what devices they will use it and how they can make maximum usability of system.  For making my website I also kept on mind about the UI designs to use in my website.
+This system is responsive which mean it is usable in all media screen without making website complex to use. It also has same color combinations making it eye friendly for the users. Navigation bar is on header part of website which is not complex for user to use. There is also not much use of random design which make website look unattractive and full of chaos. It has simple colors with just needed design without overpowering the whole purpose of website. It has simple colors but not contrasting which makes every attributes bland in the system. The pages have consistence layout throughout all page unlike pages with position of navigation and content changing in every other pages. I got these ideas about UI design from the lecture classes and some by extra research. I tried my best to give the best I could in amount of time I had.
+<!--content of div-->
+	
+</div><!--closing tag of div-->
+<div class="intro"><!--opening tag of div-->
+<br><br><b>Design:</b>
 <br>Design is really important part in any developement project. For this project as well the planning of design was done firstly before coding. The wireframes of web design before developing are shown below:
 <br>Wireframe of landing page:
-<br><img src="img/homepage.jpg" class="design1" width="50%" height="15%">
+<br><img src="img/homepage.jpg" class="design1" width="50%" height="15%"><!--linking image-->
 <br>This is the wireframe of about page:<br>
-<img src="img/about1.jpg" class="design2" width="50%" height="15%">	
+<img src="img/about1.jpg" class="design2" width="50%" height="15%">	<!--inking image-->
 <br>This is the wireframe of CV page:<br>
-<img src="img/cv.jpg" class="design3" width="50%" height="15%">
+<img src="img/cv.jpg" class="design3" width="50%" height="15%"><!--linking image-->
 <br>This is the wireframe of Social page:<br>
-<img src="img/social.jpg" class="design4" width="50%" height="15%">
+<img src="img/social.jpg" class="design4" width="50%" height="15%"><!--linking image-->
 <br>This is the wireframe of Contact page:<br>
-<img src="img/contact.jpg" class="design5" width="50%" height="15%">
+<img src="img/contact.jpg" class="design5" width="50%" height="15%"><!--linking image-->
 <br> The website is made for good experience of users and high usability of the system. The system is responsive and include UI designs. The mockup of website are below which was developed after wireframes.<br>
 <br>This is screen design of homepage:<br>
-<img src="img/homem.jpg" class="mock1" width="60%" height="15%">
+<img src="img/homem.jpg" class="mock1" width="60%" height="15%"><!--linking image-->
 <br>This is screen design of about page:<br>
-<img src="img/aboutm.jpg" class="mock2" width="60%" height="15%">
+<img src="img/aboutm.jpg" class="mock2" width="60%" height="15%"><!--linking image-->
 <br>This is screen design of CV page:<br>
-<img src="img/cvm.jpg" class="mock3" width="60%" height="15%">
+<img src="img/cvm.jpg" class="mock3" width="60%" height="15%"><!--linking image-->
 <br>This is screen design of Social page:<br>
-<img src="img/socialm.jpg" class="mock4" width="60%" height="15%">
+<img src="img/socialm.jpg" class="mock4" width="60%" height="15%"><!--linking image-->
 <br>This is screen design of Contact page:<br>
-<img src="img/contactm.jpg" class="mock5" width="60%" height="15%">
-</div>
-</div>
-</body>
-</html>
+<img src="img/contactm.jpg" class="mock5" width="60%" height="15%"><!--linking image-->
+</div><!--closing tag of div-->
+<div class="intro"><!--opening tag of div-->
+	<br><br><b>Evidence of Valid codes:</b><br>
+	Validator is used to check the erros in HTML codes. A project should always be free of erros in code. For the validation of my codes below are the proofs.
+	<img src="img/indexval.jpg" class="val1" width="60%" height="15%"><!--linking image-->
+	<img src="img/aboutval.jpg" class="val2" width="60%" height="15%"><!--linking image-->
+	<img src="img/cvval.jpg" class="val3" width="60%" height="15%"><!--linking image-->
+	<img src="img/socialval.jpg" class="val4" width="60%" height="15%"><!--linking image-->
+	<img src="img/contactval.jpg" class="val5" width="60%" height="15%"><!--linking image-->
+	<img src="img/cssval.jpg" class="val6" width="60%" height="15%"><!--linking image-->
+</div><!--closing tag of div-->
+<div class="intro"><!--opening tag of div-->
+	<br><br><b>Progressive report:</b>
+	<br> This assignment of web was done to use we learned in amount of time of first term. It was really fun assignment. For the first week of assignment I did research about the specifications of website, what are things to keep in mind while creating it and what mistakes not to make. Firstly, I made the logo text of my webiste which is my name. After that navigation was made along with the background. Footer was created after that. After completion of layout of website I added the body part of website like images, fonts style and blocks. Lastly i made the website responsive. It was one of the hardest and most time consuming aspect in this project. Overally, this project was done with great care and research with what will work best.
+</div><!--closing tag of div-->
+<div class="intro"><!--opening of div-->
+	<br><br><b>Conclusion:</b>
+	This assignment was provided with motive of increasing our knowledge about HTML and CSS and that is what exactly it did. It gave students more and deeper understanding about HTML and CSS. Though, there were some problems with making website responsive,padding and other displaying aspects of website, students overcame those by research and discussion with tutor. If more time was provided then we would have added more aminations and features to make website more attractive. Overall, this assignment prepared students for the real world web designing and made them more skill about we designing.
+</div><!--closing of div-->
+<div class="intro"><!--opening tag of div-->
+	<br><br><b>References:</b>
+	<br>1.Shukwani, D[2013], https://codepen.io/DeepS/posts/published/, [Accessed Date: 10th April 2018]
+	<br>2.W3School, [2018], https://www.w3schools.com/default.asp, [Accessed Date: 29th March 2018]
+	<br>3.Pinterest, [2018], https://www.pinterest.com/pin/117093659036340054/, [Accessed Date: 12th April 2018]
+	<br>4.Pinterest, [2018], https://www.pinterest.com/pin/434949276494646322/, [Acceseed Date: 12th April 2018]
+	<br>5.Pinterest, [2018], https://www.pinterest.com/pin/459437599464024522/, [Accessed Date: 12th April 2018]
+	<br>6.Pinterest, [2018], https://www.pinterest.com/pin/113786328071355177/, [Accessed Date: 12th April 2018]
+	<br>7.Pinterest, [2018], https://www.pinterest.com/pin/498421883744631906/, [Accessed Date: 12th April 2018]
+	<br>8. Pinterest, [2018], https://www.pinterest.com/pin/543950461213161098/, [Accessed Dat: 12th April 2018]
+	<br>9. Pinterest, [2018], https://www.pinterest.com/, [Accessed Date: 12th April 2018]
+</div><!--closing od div-->
+</div><!--closing of div-->
+</body><!--closing tag of body-->
+</html><!--closing tag of html-->
