--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
 <body><!--opening tag of body-->
 <div class="repp"><!--making whole division for body-->
 	<div class="intro"><!--opening tag of division-->
-		<img src="img/cover.jpg" class="cover" width="40%" height="15%"><!--linking image-->
+		<img src="img/coverr.jpg" class="cover" width="40%" height="15%"><!--linking image-->
 		<br><br><b>Table of contents:</b>
 		<br>1.Introduction
 		<br>2.Experience
